LA/tests/test15.a
void main ( ){

  int64[][][] a
  a <- new Array(2,3,4)
   print(a)
   initArray(a)
  return 

}

void initArray (int64[][][] A){

  A[1][2][4] <- 0
  return

}
